syntax = "proto3";

package proto;

option csharp_namespace = "DysonNetwork.Shared.Proto";

message RewindEvent {
    string account_id = 1;
    optional bytes data = 2;
    string service_id = 3;
}

message RequestRewindEvent {
    string account_id = 1;
}

service RewindService {
    rpc GetRewindEvent(RequestRewindEvent) returns (RewindEvent) {}
}